--- a/README.Rmd
+++ b/README.Rmd
@@ -20,4 +20,13 @@ Tools for multilevel models R package. Developed by Jessica Mazen, Laura Jamison
 
 # Hex
 
-Put desired hex sticker into the folder man/figures/ (name it hex.png)
+* Put desired hex sticker into the folder man/figures/ (name it hex.pn)
+
+
+# website
+
+* after merge, go to `settings` (by insights) and then `Pages`. Once
+there, enable github pages for master branch, and switch from `root`
+to `docs`.
+
+* to build website, use `pkgdown::build_site()`
