--- a/inst/refs.bib
+++ b/inst/refs.bib
@@ -6,6 +6,7 @@
   edition = {2nd},
   publisher = {Cambridge University Press},
   address = {Cambridge},
+  doi = {https://doi.org/10.1017/CBO9781139013567},
 }
 
 @Book{Chambers+Hastie:1992,
