--- a/inst/refs.bib
+++ b/inst/refs.bib
@@ -15,6 +15,7 @@
   publisher = {Chapman \& Hall},
   year = {1992},
   address = {London},
+  doi = {https://doi.org/10.1201/9780203738535},
 }
 
 @Manual{Jackman:2015,
