--- a/inst/refs.bib
+++ b/inst/refs.bib
@@ -83,7 +83,8 @@
   title = {Generalized Additive Models: An Introduction with \proglang{R}},
   year = {2006},
   publisher = {Chapman \& Hall/CRC},
-  address = {Boca Raton},
+  address = {Boca Raton, FL},
+  doi = {10.1201/9781315370279},
 }
 
 @Article{Yee:2009,
