--- a/inst/refs.bib
+++ b/inst/refs.bib
@@ -118,6 +118,7 @@
   number    = {2},
   pages     = {371--406},
   publisher = {Sage Publications},
+  doi     = {https://doi.org/10.3102/00028312042002371},
 }
 
 @Article{gilmour2015asreml,
