--- a/inst/refs.bib
+++ b/inst/refs.bib
@@ -131,8 +131,12 @@
 @Article{bates2014fitting,
   author  = {Bates, Douglas and M{\"a}chler, Martin and Bolker, Ben and Walker, Steve},
   title   = {Fitting linear mixed-effects models using lme4},
-  journal = {arXiv preprint arXiv:1406.5823},
-  year    = {2014},
+  journal = {Journal of Statistical Software},
+  year      = {2015},
+  volume    = {67},
+  number    = {1},
+  pages     = {1--48},
+  doi     = {https://doi.org/10.18637/jss.v067.i01},
 }
 
 @Article{brooks2017glmmtmb,
