--- a/inst/refs.bib
+++ b/inst/refs.bib
@@ -118,7 +118,7 @@
   number    = {2},
   pages     = {371--406},
   publisher = {Sage Publications},
-  doi     = {https://doi.org/10.3102/00028312042002371},
+  doi       = {https://doi.org/10.3102/00028312042002371},
 }
 
 @Article{gilmour2015asreml,
@@ -136,7 +136,7 @@
   volume    = {67},
   number    = {1},
   pages     = {1--48},
-  doi     = {https://doi.org/10.18637/jss.v067.i01},
+  doi       = {https://doi.org/10.18637/jss.v067.i01},
 }
 
 @Article{brooks2017glmmtmb,
@@ -148,6 +148,7 @@
   number    = {2},
   pages     = {378--400},
   publisher = {Technische Universitaet Wien},
+  doi       = {10.32614/RJ-2017-066},
 }
 
 @Article{rasbash2009mlwin,
@@ -165,6 +166,7 @@
   number    = {4},
   pages     = {685--709},
   publisher = {Springer},
+  doi       = {10.1007/s11336-013-9328-2},
 }
 
 @Book{fitzmaurice2012applied,
@@ -180,6 +182,7 @@
   publisher = {Cambridge university press},
   year      = {2006},
   author    = {Gelman, Andrew and Hill, Jennifer},
+  doi       = {https://doi.org/10.1017/CBO9780511790942},
 }
 
 @Book{goldstein2011multilevel,
@@ -188,6 +191,7 @@
   year      = {2011},
   author    = {Goldstein, Harvey},
   volume    = {922},
+  doi       = {10.1002/9780470973394},
 }
 
 @Book{hedeker2006longitudinal,
@@ -196,6 +200,7 @@
   year      = {2006},
   author    = {Hedeker, Donald and Gibbons, Robert D},
   volume    = {451},
+  doi       = {10.1002/0470036486},
 }
 
 @Book{hoffman2015longitudinal,
@@ -203,6 +208,7 @@
   publisher = {Routledge},
   year      = {2015},
   author    = {Hoffman, Lesa},
+  doi       = {https://doi.org/10.4324/9781315744094},
 }
 
 @Misc{Kellie_mixor,
@@ -226,6 +232,7 @@
   year      = {2002},
   author    = {Raudenbush, Stephen W and Bryk, Anthony S},
   volume    = {1},
+  doi       = {10.2466/pms.2002.94.2.671},
 }
 
 @Article{rockwood2019estimating,
@@ -237,6 +244,7 @@
   number    = {2},
   pages     = {288--306},
   publisher = {Taylor \& Francis},
+  doi       = {10.1080/00273171.2018.1516541},
 }
 
 @Book{skrondal2004generalized,
@@ -244,6 +252,7 @@
   publisher = {Crc Press},
   year      = {2004},
   author    = {Skrondal, Anders and Rabe-Hesketh, Sophia},
+  doi       = {https://doi.org/10.1201/9780203489437},
 }
 
 @Book{snijders2011multilevel,
@@ -277,6 +286,7 @@ lm-general/},
   year      = {2009},
   author    = {Searle, Shayle R and Casella, George and McCulloch, Charles E},
   volume    = {391},
+  doi       = {10.1002/9780470316856},
 }
 
 @Book{Rabe_Hesketh_Skrondal_2012,
